libarchive: fix data loss when aborting AddJobs and Deletejobs

Currently there is data loss when we abort an AddJob or DeleteJob with the
libarchive plugin. This happens because we always call `commit()` on the QSaveFile.

With this patch we call `commit()` only when we are not aborting (killing) the job.

BUG: 365869
FIXED-IN: 16.08.3

Differential Revision: D3129